GAMA12 column rename

--- a/dmu1/dmu1_ml_GAMA-12/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_GAMA-12/2_Merging.ipynb
@@ -25,7 +25,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -746,16 +748,16 @@
     "    master_catalogue['merr_kids_' + band].name = 'merr_omegacam_' + band\n",
     "    master_catalogue['flag_kids_' + band].name = 'flag_omegacam_' + band    \n",
     "\n",
-    "for band in ['z','y','j','h','k']:\n",
-    "    master_catalogue['f_ap_viking_' + band].name = 'f_ap_vista_' + band\n",
-    "    master_catalogue['ferr_ap_viking_' + band].name = 'ferr_ap_vista_' + band\n",
-    "    master_catalogue['m_ap_viking_' + band].name = 'm_ap_vista_' + band\n",
-    "    master_catalogue['merr_ap_viking_' + band].name = 'merr_ap_vista_' + band\n",
-    "    master_catalogue['f_viking_' + band].name = 'f_vista_' + band\n",
-    "    master_catalogue['ferr_viking_' + band].name = 'ferr_vista_' + band\n",
-    "    master_catalogue['m_viking_' + band].name = 'm_vista_' + band\n",
-    "    master_catalogue['merr_viking_' + band].name = 'merr_vista_' + band\n",
-    "    master_catalogue['flag_viking_' + band].name = 'flag_vista_' + band"
+    "for band in ['z','y','j','h','ks']:\n",
+    "    master_catalogue['f_ap_viking_' + band.strip('s')].name = 'f_ap_vista_' + band\n",
+    "    master_catalogue['ferr_ap_viking_' + band.strip('s')].name = 'ferr_ap_vista_' + band\n",
+    "    master_catalogue['m_ap_viking_' + band.strip('s')].name = 'm_ap_vista_' + band\n",
+    "    master_catalogue['merr_ap_viking_' + band.strip('s')].name = 'merr_ap_vista_' + band\n",
+    "    master_catalogue['f_viking_' + band.strip('s')].name = 'f_vista_' + band\n",
+    "    master_catalogue['ferr_viking_' + band.strip('s')].name = 'ferr_vista_' + band\n",
+    "    master_catalogue['m_viking_' + band.strip('s')].name = 'm_vista_' + band\n",
+    "    master_catalogue['merr_viking_' + band.strip('s')].name = 'merr_vista_' + band\n",
+    "    master_catalogue['flag_viking_' + band.strip('s')].name = 'flag_vista_' + band"
    ]
   },
   {
@@ -893,7 +895,7 @@
     "    1 * ~np.isnan(master_catalogue['f_vista_y']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_vista_h']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_vista_j']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_vista_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_vista_ks'])\n",
     ")\n",
     "\n",
     "nb_mir_flux = np.zeros(len(master_catalogue), dtype=bool)"
