ELAIS-S1 column renaming

--- a/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/2_Merging.ipynb
@@ -1352,6 +1352,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Column renaming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "renaming = OrderedDict({\n",
+    "    '_voice_b99':'_wfi_b',\n",
+    "    '_voice_b123':'_wfi_b123',\n",
+    "    '_voice_v': '_wfi_v',\n",
+    "    '_voice_r':'_wfi_r',\n",
+    "})\n",
+    "\n",
+    "\n",
+    "for col in master_catalogue.colnames:\n",
+    "    for rename_col in list(renaming):\n",
+    "        if rename_col in col:\n",
+    "            master_catalogue.rename_column(col, col.replace(rename_col, renaming[rename_col]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## VII.a Wavelength domain coverage\n",
     "\n",
     "We add a binary `flag_optnir_obs` indicating that a source was observed in a given wavelength domain:\n",
@@ -1453,7 +1482,7 @@
     "# CFHT band.\n",
     "# Check to use catalogue flags from HSC and PanSTARRS.\n",
     "nb_optical_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_voice_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_wfi_r']) +\n",
     "    \n",
     "    1 * ~np.isnan(master_catalogue['f_decam_g']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_r']) +    \n",
