--- a/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
@@ -26,7 +26,9 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
@@ -280,13 +282,13 @@
    "source": [
     "u_bands = []\n",
     "g_bands = [           \"DECam g\"]\n",
-    "r_bands = [\"VOICE r\", \"DECam r\"]\n",
+    "r_bands = [\"WFI r\",   \"DECam r\"]\n",
     "i_bands = [           \"DECam i\"]\n",
     "z_bands = [           \"DECam z\"]\n",
     "y_bands = [\"VISTA y\", \"DECam y\"]\n",
     "j_bands = [\"VISTA j\"]\n",
     "h_bands = [\"VISTA h\"]\n",
-    "k_bands = [\"VISTA k\"]"
+    "k_bands = [\"VISTA ks\"]"
    ]
   },
   {
@@ -673,8 +675,8 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_voice_r'],\n",
-    "    master_catalogue['m_ap_voice_r'] - master_catalogue['m_voice_r'],\n",
+    "    master_catalogue['m_wfi_r'],\n",
+    "    master_catalogue['m_ap_wfi_r'] - master_catalogue['m_wfi_r'],\n",
     "    \"r total magnitude (VOICE)\", \"r aperture mag - total mag (VOICE)\",\n",
     "    master_catalogue[\"stellarity\"],\n",
     "    invert_x=True\n",
@@ -717,7 +719,7 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_voice_b99'] - master_catalogue['m_voice_r'],\n",
+    "    master_catalogue['m_wfi_b'] - master_catalogue['m_wfi_r'],\n",
     "    master_catalogue['m_vista_j'] - master_catalogue['m_vista_ks'],\n",
     "    \"b99 - r (VOICE)\", \"J - Ks (VISTA)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
@@ -749,8 +751,8 @@
    ],
    "source": [
     "nb_ccplots(\n",
-    "    master_catalogue['m_voice_r'] - master_catalogue['m_irac_i1'],\n",
-    "    master_catalogue['m_voice_b99'] - master_catalogue['m_voice_v'],\n",
+    "    master_catalogue['m_wfi_r'] - master_catalogue['m_irac_i1'],\n",
+    "    master_catalogue['m_wfi_b'] - master_catalogue['m_wfi_v'],\n",
     "    \"VOICE r - IRAC1\", \"b99 - v (VOICE)\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
