GAMA-12 Cigale inputs
perhaps should rename decam to 90prime etc

--- a/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
@@ -641,7 +641,7 @@
    "outputs": [],
    "source": [
     "bands = [\n",
-    "    ['candels-wircam_k', 'ultradeep-wircam_k', 'wircam_k'],\n",
+    "    ['candels-wircam_k', 'ultradeep-wircam_k', 'wircam_ks'],\n",
     "    ['candels-irac_i1',  'ultradeep-irac_i1',  'irac_i1'],\n",
     "    ['candels-irac_i2',  'ultradeep-irac_i2',  'irac_i2'],\n",
     "    ['candels-irac_i3',  'ultradeep-irac_i3',  'irac_i3'],\n",
@@ -1025,7 +1025,7 @@
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
-    "    1 * ~np.isnan(master_catalogue['f_wircam_k'])\n",
+    "    1 * ~np.isnan(master_catalogue['f_wircam_ks'])\n",
     ")\n",
     "\n",
     "nb_mir_flux = (\n",
