HDF-N column renames and filter checking
#21

--- a/dmu1/dmu1_ml_HDF-N/1.3_Hawaii-HDFN.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/1.3_Hawaii-HDFN.ipynb
@@ -42,7 +42,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -206,14 +208,14 @@
     "        'dR': \"merr_ap_suprime_r\",\n",
     "        'Riso': \"m_suprime_r\",\n",
     "        'dRiso': \"merr_suprime_r\",\n",
-    "            'I':  \"m_ap_suprime_i\",\n",
-    "        'dI': \"merr_ap_suprime_i\",\n",
-    "        'Iiso': \"m_suprime_i\",\n",
-    "        'dIiso': \"merr_suprime_i\",\n",
-    "            'Z':  \"m_ap_suprime_z\",\n",
-    "        'dZ': \"merr_ap_suprime_z\",\n",
-    "        'Ziso': \"m_suprime_z\",\n",
-    "        'dZiso': \"merr_suprime_z\",\n",
+    "            'I':  \"m_ap_suprime_ip\",\n",
+    "        'dI': \"merr_ap_suprime_ip\",\n",
+    "        'Iiso': \"m_suprime_ip\",\n",
+    "        'dIiso': \"merr_suprime_ip\",\n",
+    "            'Z':  \"m_ap_suprime_zp\",\n",
+    "        'dZ': \"merr_ap_suprime_zp\",\n",
+    "        'Ziso': \"m_suprime_zp\",\n",
+    "        'dZiso': \"merr_suprime_zp\",\n",
     "            'HK':  \"m_ap_quirc_hk\",\n",
     "        'dHK': \"merr_ap_quirc_hk\",\n",
     "        'HKiso': \"m_quirc_hk\",\n",
@@ -235,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue_z = Table.read(\"../../dmu0/dmu0_Hawaii-HDFN/data/Z.fits\")[list(imported_columns)]\n",
@@ -412,7 +416,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
@@ -530,8 +536,8 @@
     "             'merr_suprime_b', \n",
     "             'merr_suprime_v', \n",
     "             'merr_suprime_r',\n",
-    "             'merr_suprime_i',\n",
-    "             'merr_suprime_z',\n",
+    "             'merr_suprime_ip',\n",
+    "             'merr_suprime_zp',\n",
     "             'merr_quirc_hk']\n",
     "FLAG_NAME = 'hawaii_flag_cleaned'\n",
     "\n",
