--- a/dmu1/dmu1_ml_HDF-N/1.6_CANDELS-GOODS-N.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/1.6_CANDELS-GOODS-N.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -122,15 +124,15 @@
     "        'ACS_F850LP_FLUX': \"f_acs_f850lp\", \n",
     "        'ACS_F850LP_FLUXERR': \"ferr_acs_f850lp\", \n",
     "    \n",
-    "        'WFC3_F105W_FLUX': \"f_acs_f105w\", \n",
-    "        'WFC3_F105W_FLUXERR': \"ferr_acs_f105w\", \n",
-    "        'WFC3_F125W_FLUX': \"f_acs_f125w\", \n",
-    "        'WFC3_F125W_FLUXERR': \"ferr_acs_f125w\", \n",
-    "        'WFC3_F140W_FLUX': \"f_acs_f140w\", \n",
-    "        'WFC3_F140W_FLUXERR': \"ferr_acs_f140w\", \n",
-    "        'WFC3_F160W_FLUX': \"f_acs_f160w\", \n",
-    "        'WFC3_F160W_FLUXERR': \"ferr_acs_f160w\", \n",
-    "    #MOIRCS?\n",
+    "        'WFC3_F105W_FLUX': \"f_wfc3_f105w\", \n",
+    "        'WFC3_F105W_FLUXERR': \"ferr_wfc3_f105w\", \n",
+    "        'WFC3_F125W_FLUX': \"f_wfc3_f125w\", \n",
+    "        'WFC3_F125W_FLUXERR': \"ferr_wfc3_f125w\", \n",
+    "        'WFC3_F140W_FLUX': \"f_wfc3_f140w\", \n",
+    "        'WFC3_F140W_FLUXERR': \"ferr_wfc3_f140w\", \n",
+    "        'WFC3_F160W_FLUX': \"f_wfc3_f160w\", \n",
+    "        'WFC3_F160W_FLUXERR': \"ferr_wfc3_f160w\", \n",
+    "    #MOIRCS. There is a Ks and K. We believe this to be K.\n",
     "        'MOIRCS_K_FLUX':\"f_moircs_k\",\n",
     "        'MOIRCS_K_FLUXERR':\"ferr_moircs_k\",\n",
     "    #CFHT WIRCAM\n",
@@ -292,8 +294,8 @@
    "source": [
     "SORT_COLS = [\"merr_acs_f435w\",\"ferr_acs_f606w\",\n",
     "             \"ferr_acs_f775w\",\"ferr_acs_f814w\",\n",
-    "             \"ferr_acs_f850lp\", \"ferr_acs_f105w\",\n",
-    "             \"ferr_acs_f125w\",\"ferr_acs_f140w\",\"ferr_acs_f160w\"]\n",
+    "             \"ferr_acs_f850lp\", \"ferr_wfc3_f105w\",\n",
+    "             \"ferr_wfc3_f125w\",\"ferr_wfc3_f140w\",\"ferr_wfc3_f160w\"]\n",
     "FLAG_NAME = 'candels-gn_flag_cleaned'\n",
     "\n",
     "nb_orig_sources = len(catalogue)\n",
@@ -478,7 +480,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue.write(\"{}/CANDELS-GOODS-N.fits\".format(OUT_DIR), overwrite=True)"
