--- a/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
@@ -1021,7 +1021,9 @@
     "    1 * ~np.isnan(master_catalogue['f_gpc1_i']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_z']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_gpc1_y']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_suprime_r']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_suprime_r']) + \n",
+    "    1 * ~np.isnan(master_catalogue['f_suprime_ip']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_suprime_zp'])\n",
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
@@ -1176,6 +1178,17 @@
    "metadata": {},
    "source": [
     "## XI - Saving the catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "master_catalogue[:10].show_in_notebook()"
    ]
   },
   {
