--- a/dmu1/dmu1_ml_HDF-N/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/3_Checks_and_diagnostics.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -330,7 +332,7 @@
     "g_bands = [\"GPC1 g\"]\n",
     "r_bands = [\"GPC1 r\", \"SUPRIME r\"]\n",
     "i_bands = [\"GPC1 i\" ]\n",
-    "z_bands = [\"GPC1 z\", \"SUPRIME z\"]\n",
+    "z_bands = [\"GPC1 z\", \"SUPRIME zp\"]\n",
     "y_bands = [\"GPC1 y\"]\n",
     "j_bands = [                                               ]\n",
     "h_bands = [                                               ]\n",
@@ -970,7 +972,7 @@
     }
    ],
    "source": [
-    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, master_catalogue['m_wircam_k'][ml_twomass_idx],\n",
+    "nb_compare_mags(twomass['kmag'] + k_2mass_to_ab, master_catalogue['m_wircam_ks'][ml_twomass_idx],\n",
     "                labels=(\"2MASS Ks\", \"WIRCAM Ks (total)\"))"
    ]
   },
@@ -1065,7 +1067,7 @@
    "source": [
     "nb_ccplots(\n",
     "    master_catalogue['m_mosaic_u'] - master_catalogue['m_suprime_b'],\n",
-    "    master_catalogue['m_gpc1_r'] - master_catalogue['m_wircam_k'],\n",
+    "    master_catalogue['m_gpc1_r'] - master_catalogue['m_wircam_ks'],\n",
     "    \"Mosaic u - Suprime B\", \"GPC1 r - Wircam Ks\",\n",
     "    master_catalogue[\"stellarity\"]\n",
     ")"
