HDF-N Cigale input

--- a/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Herschel-Stripe-82/Herschel-Stripe-82_catalogue_merging.ipynb
@@ -368,7 +368,7 @@
     "        # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "        merged_table.write(\"data/tiles/Herschel-Stripe-82_{}_cigale_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
+    "        merged_table.write(\"data/tiles/Herschel-Stripe-82_cigale_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   },
   {
