--- a/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/2_Merging.ipynb
@@ -771,7 +771,7 @@
     "    merr_ir[use_candels] = master_catalogue['merr_' + band[0]][use_candels]\n",
     "    merr_ir[use_ultradeep] = master_catalogue['merr_' + band[1]][use_ultradeep]\n",
     "    \n",
-    "    flag_ir = np.full(len(master_catalogue), np.nan)\n",
+    "    flag_ir = np.full(len(master_catalogue), False, dtype=bool)\n",
     "    flag_ir[use_candels] = master_catalogue['flag_' + band[0]][use_candels]\n",
     "    flag_ir[use_ultradeep] = master_catalogue['flag_' + band[1]][use_ultradeep]\n",
     "\n",
@@ -1178,6 +1178,19 @@
    "metadata": {},
    "source": [
     "## XI - Saving the catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for col in master_catalogue.colnames:\n",
+    "    if \"flag\" in col:\n",
+    "        master_catalogue[col]  = master_catalogue[col].astype(bool)"
    ]
   },
   {
